--- a/cloudfarming-web/pom.xml
+++ b/cloudfarming-web/pom.xml
@@ -23,6 +23,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!-- 接口文档 -->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+        </dependency>
         <!-- MySQL连接 -->
         <dependency>
             <groupId>com.mysql</groupId>
