--- a/cloudfarming-web/src/main/resources/application.yaml
+++ b/cloudfarming-web/src/main/resources/application.yaml
@@ -9,3 +9,18 @@ spring:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    tags-sorter: alpha
+    operations-sorter: alpha
+  api-docs:
+    path: /v3/api-docs
+  group-configs:
+    - group: 'default'
+      paths-to-match: '/**'
+      packages-to-scan: com.vv.cloudfarming.controller
+knife4j:
+  enable: true
+  setting:
+    language: zh_cn
