--- a/cloudfarming-web/src/main/resources/application.yaml
+++ b/cloudfarming-web/src/main/resources/application.yaml
@@ -24,3 +24,11 @@ knife4j:
   enable: true
   setting:
     language: zh_cn
+sa-token:
+  token-name: satoken
+  timeout: 2592000
+  active-timeout: -1
+  is-concurrent: false
+  is-share: false
+  token-style: uuid
+  is-log: false
