--- a/cloudfarming-web/pom.xml
+++ b/cloudfarming-web/pom.xml
@@ -44,5 +44,11 @@
             <artifactId>biz-user</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- 商品店铺模块 -->
+        <dependency>
+            <groupId>com.vv.cloudfarming</groupId>
+            <artifactId>biz-shop</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
