feature:封装COS对象存储功能为SpringBoot Starter

--- a/cloudfarming-framework/cloudfarming-storage-spring-boot-starter/pom.xml
+++ b/cloudfarming-framework/cloudfarming-storage-spring-boot-starter/pom.xml
@@ -5,16 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.vv.cloudfarming</groupId>
-        <artifactId>cloudfarming</artifactId>
+        <artifactId>cloudfarming-framework</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>cloudfarming-framework</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>common</module>
-        <module>cloudfarming-storage-spring-boot-starter</module>
-    </modules>
+    <artifactId>cloudfarming-storage-spring-boot-starter</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -22,4 +17,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+        </dependency>
+    </dependencies>
 </project>
