--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,8 @@
         <redisson.version>3.27.2</redisson.version>
         <knife4j-openapi3-jakarta-spring-boot-starter.version>4.5.0
         </knife4j-openapi3-jakarta-spring-boot-starter.version>
-        <sa-token>1.44.0</sa-token>
+        <sa-token.version>1.44.0</sa-token.version>
+        <cos.version>5.6.227</cos.version>
         <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -64,7 +65,7 @@
             <dependency>
                 <groupId>cn.dev33</groupId>
                 <artifactId>sa-token-spring-boot3-starter</artifactId>
-                <version>${sa-token}</version>
+                <version>${sa-token.version}</version>
             </dependency>
 
             <dependency>
@@ -83,6 +84,12 @@
                 <groupId>org.redisson</groupId>
                 <artifactId>redisson-spring-boot-starter</artifactId>
                 <version>${redisson.version}</version>
+            </dependency>
+            <!-- 腾讯云COS对象存储 -->
+            <dependency>
+                <groupId>com.qcloud</groupId>
+                <artifactId>cos_api</artifactId>
+                <version>${cos.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
