feature：引入redis集成satoken、查询商品添加旁路缓存

--- a/cloudfarming-service/biz-shop/pom.xml
+++ b/cloudfarming-service/biz-shop/pom.xml
@@ -19,6 +19,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
         <!-- 公共模块 -->
         <dependency>
             <groupId>com.vv.cloudfarming</groupId>
