--- a/cloudfarming-web/src/main/resources/application.yaml
+++ b/cloudfarming-web/src/main/resources/application.yaml
@@ -6,6 +6,24 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/cloud_breeding
     username: root
     password: root
+  data:
+    # redis配置
+    redis:
+      database: 1
+      host: 127.0.0.1
+      port: 6379
+      # password:
+      timeout: 10s
+      lettuce:
+        pool:
+          # 连接池最大连接数
+          max-active: 200
+          # 连接池最大阻塞等待时间（使用负值表示没有限制）
+          max-wait: -1ms
+          # 连接池中的最大空闲连接
+          max-idle: 10
+          # 连接池中的最小空闲连接
+          min-idle: 0
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
