--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         </knife4j-openapi3-jakarta-spring-boot-starter.version>
         <sa-token.version>1.44.0</sa-token.version>
         <cos.version>5.6.227</cos.version>
+        <redisson.version>3.27.2</redisson.version>
         <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -90,6 +91,23 @@
                 <groupId>com.qcloud</groupId>
                 <artifactId>cos_api</artifactId>
                 <version>${cos.version}</version>
+            </dependency>
+            <!-- redis -->
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson-spring-boot-starter</artifactId>
+                <version>${redisson.version}</version>
+            </dependency>
+            <!-- Sa-Token 整合 RedisTemplate -->
+            <dependency>
+                <groupId>cn.dev33</groupId>
+                <artifactId>sa-token-redis-template</artifactId>
+                <version>${sa-token.version}</version>
+            </dependency>
+            <!-- 提供 Redis 连接池 -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-pool2</artifactId>
             </dependency>
         </dependencies>
     </dependencyManagement>
