--- a/cloudfarming-service/biz-order/pom.xml
+++ b/cloudfarming-service/biz-order/pom.xml
@@ -30,6 +30,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+        </dependency>
         <!-- 公共模块 -->
         <dependency>
             <groupId>com.vv.cloudfarming</groupId>
