--- a/cloudfarming-service/pom.xml
+++ b/cloudfarming-service/pom.xml
@@ -14,6 +14,7 @@
         <module>biz-shop</module>
         <module>biz-operation</module>
         <module>biz-order</module>
+        <module>biz-cart</module>
     </modules>
     <artifactId>cloudfarming-service</artifactId>
 
