--- a/cloudfarming-web/pom.xml
+++ b/cloudfarming-web/pom.xml
@@ -71,5 +71,11 @@
             <artifactId>biz-order</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- 购物车模块 -->
+        <dependency>
+            <groupId>com.vv.cloudfarming</groupId>
+            <artifactId>biz-cart</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
