feature：管理端Vue-登录页面&抽取公共模块

--- a/cloudfarming-vue/apps/admin/package.json
+++ b/cloudfarming-vue/apps/admin/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@cloudfarming/core": "workspace:*",
     "@vueuse/core": "^14.1.0",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.13.2",
