--- a/cloudfarming-vue/package.json
+++ b/cloudfarming-vue/package.json
@@ -6,5 +6,8 @@
     "type": "git",
     "url": "https://github.com/choviZ/cloudfarming.git"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "dayjs": "^1.11.19"
+  }
 }
