feature：创建商品页面

--- a/cloudfarming-vue/apps/web/package.json
+++ b/cloudfarming-vue/apps/web/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@cloudfarming/core": "workspace:*",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.13.2",
     "pinia": "^3.0.4",
