feature:发布认养项目页面

--- a/cloudfarming-vue/packages/core/package.json
+++ b/cloudfarming-vue/packages/core/package.json
@@ -13,6 +13,10 @@
     "./types/*": {
       "types": "./src/types/*.ts",
       "import": "./src/types/*.ts"
+    },
+    "./api/*": {
+      "types": "./src/api/*.ts",
+      "import": "./src/api/*.ts"
     }
   },
   "files": [
