--- a/cloudfarming-vue/packages/core/package.json
+++ b/cloudfarming-vue/packages/core/package.json
@@ -10,16 +10,15 @@
       "types": "./src/index.ts",
       "import": "./src/index.ts"
     },
-    "./types/*": {
-      "types": "./src/types/*.ts",
-      "import": "./src/types/*.ts"
-    },
     "./api/*": {
-      "types": "./src/api/*.ts",
-      "import": "./src/api/*.ts"
+      "types": "./src/api/*/index.ts",
+      "import": "./src/api/*/index.ts"
     }
   },
   "files": [
     "src"
-  ]
+  ],
+  "devDependencies": {
+    "typescript": "^5.9.3"
+  }
 }
