--- a/cloudfarming-vue/apps/web/package.json
+++ b/cloudfarming-vue/apps/web/package.json
@@ -19,6 +19,7 @@
     "@cloudfarming/core": "workspace:*",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.13.2",
+    "element-china-area-data": "^6.1.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
