--- a/cloudfarming-service/biz-order/pom.xml
+++ b/cloudfarming-service/biz-order/pom.xml
@@ -46,5 +46,14 @@
             <artifactId>biz-shop</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- RabbitMQ -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
 </project>
