--- a/cloudfarming-vue/apps/web/tsconfig.app.json
+++ b/cloudfarming-vue/apps/web/tsconfig.app.json
@@ -7,7 +7,8 @@
 
     "paths": {
       "@/*": ["./src/*"],
-      "@cloudfarming/core": ["../../packages/core/src"]
+      "@cloudfarming/core": ["../../packages/core/src"],
+      "@cloudfarming/core/*": ["../../packages/core/src/*"]
     }
   }
 }
