--- a/cloudfarming-vue/apps/admin/package.json
+++ b/cloudfarming-vue/apps/admin/package.json
@@ -20,6 +20,7 @@
     "@vueuse/core": "^14.1.0",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
     "less": "^4.5.1",
     "pinia": "^3.0.4",
     "vue": "^3.5.26",
