--- a/cloudfarming-web/pom.xml
+++ b/cloudfarming-web/pom.xml
@@ -92,5 +92,10 @@
             <artifactId>cloudfarming-storage-spring-boot-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>4.38.10.ALL</version>
+        </dependency>
     </dependencies>
 </project>
