--- a/services/order-pay-service/pom.xml
+++ b/services/order-pay-service/pom.xml
@@ -62,5 +62,10 @@
             <artifactId>alipay-sdk-java</artifactId>
             <version>4.38.10.ALL</version>
         </dependency>
+        <dependency>
+            <groupId>com.vv.cloudfarming</groupId>
+            <artifactId>idempotent-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
