--- a/services/order-pay-service/pom.xml
+++ b/services/order-pay-service/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.vv.cloudfarming</groupId>
+            <artifactId>web-springboot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!-- 商品店铺模块 -->
         <dependency>
             <groupId>com.vv.cloudfarming</groupId>
@@ -66,6 +71,21 @@
             <groupId>com.vv.cloudfarming</groupId>
             <artifactId>idempotent-spring-boot-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!-- nacos -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <!-- openfeign -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <!-- openfeign 已不再提供默认负载均衡器 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-loadbalancer</artifactId>
         </dependency>
     </dependencies>
 </project>
