--- a/services/order-pay-service/pom.xml
+++ b/services/order-pay-service/pom.xml
@@ -20,6 +20,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.vv.cloudfarming</groupId>
+            <artifactId>database-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba.fastjson2</groupId>
             <artifactId>fastjson2</artifactId>
         </dependency>
@@ -45,6 +50,10 @@
             <groupId>com.vv.cloudfarming</groupId>
             <artifactId>web-springboot-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-redis-jackson</artifactId>
         </dependency>
         <!-- 商品店铺模块 -->
         <dependency>
