--- a/services/pom.xml
+++ b/services/pom.xml
@@ -17,6 +17,7 @@
         <module>product-service</module>
         <module>order-pay-service</module>
         <module>aggregation-service</module>
+        <module>gateway-service</module>
     </modules>
 
     <properties>
@@ -27,29 +28,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.vv.cloudfarming</groupId>
-            <artifactId>database-spring-boot-starter</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.vv.cloudfarming</groupId>
-            <artifactId>web-springboot-starter</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>${hutool-all.version}</version>
-        </dependency>
-
-        <!-- Sa-Token 权限认证，在线文档：https://sa-token.cc -->
-        <dependency>
-            <groupId>cn.dev33</groupId>
-            <artifactId>sa-token-spring-boot3-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>cn.dev33</groupId>
-            <artifactId>sa-token-redis-template</artifactId>
         </dependency>
     </dependencies>
 </project>
