--- a/services/user-operation-service/pom.xml
+++ b/services/user-operation-service/pom.xml
@@ -20,6 +20,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.vv.cloudfarming</groupId>
+            <artifactId>database-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
@@ -41,6 +46,10 @@
             <groupId>com.vv.cloudfarming</groupId>
             <artifactId>web-springboot-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-redis-jackson</artifactId>
         </dependency>
         <!-- nacos -->
         <dependency>
