--- a/services/gateway-service/src/main/resources/application.yaml
+++ b/services/gateway-service/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 server:
   port: 8000
 spring:
+  profiles:
+    active: aggregation
   application:
     name: cloudfarming-gateway
   data:
@@ -30,21 +32,7 @@ spring:
             allowedMethods: "*"
             allowedHeaders: "*"
             allowCredentials: true
-      routes:
-        - id: order-service
-          uri: lb://cloudfarming-order-pay
-          predicates:
-            - Path=/api/order/**,/api/pay/**,/api/alipay/**
 
-        - id: product-service
-          uri: lb://cloudfarming-product
-          predicates:
-            - Path=/api/adopt/**,/api/attribute/**,/api/cart/**,/api/category/**,/api/shop/**,/api/spu/**,/api/sku/**,/api/skock/**
-
-        - id: user-service
-          uri: lb://cloudfarming-user-operation
-          predicates:
-            - Path=/api/farmer/**,/api/user/**,/api/advert/**,/api/receive-address/**
 
 sa-token:
   token-name: satoken
