feature:通用审核机制

--- a/services/gateway-service/src/main/resources/application-dev.yaml
+++ b/services/gateway-service/src/main/resources/application-dev.yaml
@@ -10,7 +10,7 @@ spring:
         - id: product-service
           uri: lb://cloudfarming-product
           predicates:
-            - Path=/api/adopt/**,/api/attribute/**,/api/cart/**,/api/category/**,/api/shop/**,/api/spu/**,/api/sku/**,/api/skock/**
+            - Path=/api/adopt/**,/api/attribute/**,/api/cart/**,/api/category/**,/api/shop/**,/api/spu/**,/api/sku/**,/api/skock/**,/api/audit/**
 
         - id: user-service
           uri: lb://cloudfarming-user-operation
