--- a/services/gateway-service/src/main/resources/application-aggregation.yaml
+++ b/services/gateway-service/src/main/resources/application-aggregation.yaml
@@ -9,7 +9,7 @@ spring:
         - id: product-service
           uri: lb://cloudfarming-aggregation
           predicates:
-            - Path=/api/adopt/**,/api/attribute/**,/api/cart/**,/api/category/**,/api/shop/**,/api/spu/**,/api/sku/**,/api/stock/**
+            - Path=/api/adopt/**,/api/attribute/**,/api/cart/**,/api/category/**,/api/shop/**,/api/spu/**,/api/sku/**,/api/stock/**,/api/audit/**
         - id: user-service
           uri: lb://cloudfarming-aggregation
           predicates:
