--- a/services/aggregation-service/pom.xml
+++ b/services/aggregation-service/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>product-service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- 支付宝sdk -->
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>4.38.10.ALL</version>
+        </dependency>
     </dependencies>
 
     <build>
