--- a/services/order-pay-service/src/main/resources/application.yaml
+++ b/services/order-pay-service/src/main/resources/application.yaml
@@ -7,10 +7,8 @@ spring:
   application:
     name: cloudfarming-order-pay
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/cloud_breeding
-    username: root
-    password: root
+    driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
+    url: jdbc:shardingsphere:classpath:shardingsphere-config.yaml
   data:
     redis:
       host: 127.0.0.1
