--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         </knife4j-openapi3-jakarta-spring-boot-starter.version>
         <sa-token.version>1.44.0</sa-token.version>
         <cos.version>5.6.227</cos.version>
+        <shardingsphere.version>5.3.2</shardingsphere.version>
         <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -144,6 +145,12 @@
                 <groupId>com.alipay.sdk</groupId>
                 <artifactId>alipay-sdk-java</artifactId>
                 <version>4.38.10.ALL</version>
+            </dependency>
+            <!-- 分库分表 -->
+            <dependency>
+                <groupId>org.apache.shardingsphere</groupId>
+                <artifactId>shardingsphere-jdbc-core</artifactId>
+                <version>${shardingsphere.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
