--- a/services/aggregation-service/pom.xml
+++ b/services/aggregation-service/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>alipay-sdk-java</artifactId>
             <version>4.38.10.ALL</version>
         </dependency>
+        <!-- 分库分表 -->
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-jdbc-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
