--- a/services/order-pay-service/pom.xml
+++ b/services/order-pay-service/pom.xml
@@ -96,5 +96,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-loadbalancer</artifactId>
         </dependency>
+        <!-- 分库分表 -->
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-jdbc-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
